<resources>
    <string name="app_name">结社</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">非法的Email地址</string>
    <string name="error_invalid_password">密码过短</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">请先填写该项</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="error_invalid_repeat_password">密码不匹配</string>
    <string name="change_password">修改密码</string>
    <string name="change_email">修改邮箱</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检查更新</string>
    <string name="basic_info">基础信息设置</string>
    <string name="other_info">其他设置</string>
    <string name="my_activity">我的活动</string>
    <string name="admin">我是管理员</string>
    <string name="setting">设置</string>
    <string name="current_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="repeat_password">重复密码</string>
    <string name="current_email">原邮箱</string>
    <string name="new_email">新邮箱</string>
    <string name="repeat_email">重复邮箱</string>
    <string name="submit_change_psw">确认</string>
    <string name="title_activity_post_detail">PostDetailActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_user_detail_info">UserDetailInfoActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>
